--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_course
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
+# A version number is three numbers sepaated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
@@ -11,6 +11,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  flutter: "0.11.14-pre.2"
 
 dependencies:
   flutter:
@@ -20,14 +21,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   scoped_model: ^0.3.0
-  http: ^0.12.0
+  http: ^0.11.3+17
   shared_preferences: ^0.4.3
   rxdart: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  google_maps_flutter: 0.0.3+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
